objects/vlocity_cmt__PriceListEntry__c.object
<CustomObject>
    <description>An entry in a price list is a specific price, cost, fee, discount or adjustment defined within a price list. A given price list entry may be defined for an offer, a promotion, or some other context. The price list entry defines the terms and conditions of the pricing including the duration of the pricing as well as policies governing the pricing.</description>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The master global key of the Price List Entry.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingElementGlobalKey__c</fullName>
        <description>The master global key of the associated Pricing Element.</description>
        <externalId>true</externalId>
        <label>Pricing Element Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingElementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Salesforce record id of the version record of the associated Pricing Element.</description>
        <label>Pricing Element</label>
        <referenceTo>vlocity_cmt__PricingElement__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingMatrixBindingData__c</fullName>
        <label>Pricing Matrix Binding</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price List Entries (Product)</relationshipLabel>
        <relationshipName>ProductPriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RulesDescription__c</fullName>
        <label>Description of Rules</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>vlocity_cmt__TimePlan__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Policy</label>
        <referenceTo>vlocity_cmt__TimePolicy__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price List Entry</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price List Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>